--- a/index.phtml
+++ b/index.phtml
@@ -24,7 +24,7 @@
                        <input type='password' name='passwd' id='passwd' maxlength="50" placeholder="Password"/>
                        <input type='submit' name='submit' value='Sign in'/>      
                     </form>
-                    <a class="create_account" href="create.php">
+                    <a class="create_account" href="new_account.phtml">
                         Create Account
                     </a>
             </div>
