--- a/new_account.phtml
+++ b/new_account.phtml
@@ -9,7 +9,15 @@
 <body>
     <div class="info_box">
         <div class="info">
-                <form id='new_account' action='login.php' method='post' accept-charset='UTF-8'>
+                    <span class="error_msg">
+                            <?php
+                            $msg = base64_decode($_GET['msg']);
+                            if(isset($_GET['msg']))
+                                echo $msg;
+                            unset($_GET['msg']);
+                            ?>
+                       </span>
+                <form id='new_account' action='create.php' method='post' accept-charset='UTF-8'>
                         <input type='hidden' name='submitted' id='submitted' value='1'/>
                         <label for='name' >Name<span>*</span></label><br>
                         <input type='text' name='name' id='name'  maxlength="50" /><br>
@@ -21,7 +29,7 @@
                         <input type='text' name='login' id='login'  maxlength="50" /><br>
 
                         <label for='passwd' >Password<span>*</span></label>
-                        <input type='passwd' name='passwd' id='passwd' maxlength="50" /><br>
+                        <input type='password' name='passwd' id='passwd' maxlength="50" /><br>
 
                         <label for='email' >Email<span>*</span></label><br>
                         <input type='text' name='email' id='email'  maxlength="50" /><br>
